Setup to start implementing and following along with Angular course

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "recipe-book"
+    }
+  },
+  "defaultProject": "recipe-book",
+  "cli": {
+    "analytics": false
+  }
 }
